Update use-gui/src/main/java/org/tzi/use/gui/views/diagrams/objectdiagram/NewObjectDiagram.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>